[tool.poetry]
name = "authorship attribution"
version = "0.1.0"
description = ""
authors = ["Chaunice Zhang <chaunice@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
duckdb = "^0.9.2"
pyarrow = "^15.0.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
